Fix white background on mobile forums listings and reintroduce sidebars to forum styles

--- a/sass/_forum_screens.scss
+++ b/sass/_forum_screens.scss
@@ -118,7 +118,6 @@
     flex-direction: column;
     align-items: stretch;
     margin-bottom: 0.5rem;
-    //background: #fff;
 
     .forum-icon-wrapper {
       display: none;
@@ -176,7 +175,6 @@
     flex-direction: column;
     align-items: stretch;
     margin-bottom: 0.5rem;
-    background: #fff;
 
     .thread-icon-wrapper {
       display: none;
